Improved contrast for go-to-top arrow on mobile versions. https://github.com/deduced/bov-personal-portfolio/issues/10

--- a/src/stylesheets/components/_back-to-top.scss
+++ b/src/stylesheets/components/_back-to-top.scss
@@ -5,7 +5,7 @@
   z-index: 1;
   text-decoration: none;
   color: #000000;
-  background-color: rgba(235, 235, 235, 0.80);
+  background-color: rgba(131, 130, 130, 0.8);
   padding: 1em;
   display: none;
 
